--- a/_config.yml
+++ b/_config.yml
@@ -26,7 +26,9 @@ baseurl: "/"
 url: "https://monhealthcoach.com"
 
 # Build settings
-theme: minimal-mistakes-jekyll
+plugins:
+  - jekyll-include-cache
+remote_theme: "mmistakes/minimal-mistakes@4.27.3"
 
 # Exclude from processing.
 # The following items will not be processed, by default.
