feat: Use compressed images

--- a/_config.yml
+++ b/_config.yml
@@ -46,7 +46,7 @@ logo: "/assets/images/Logo_MHC.jpg"
 # Site Author
 author:
   name             : "Jérôme Triomphe"
-  avatar           : "/assets/images/Jérôme Kitesurf Boracay.jpg"
+  avatar           : "/assets/images/Jérôme Kitesurf Boracay.webp"
   bio              : "Integrative Nutrition Health Coach"
   location         : "France"
   links:
