--- a/_config.yml
+++ b/_config.yml
@@ -73,6 +73,6 @@ atom_feed:
   hide: true
 
 analytics:
-  provider: "google"
+  provider: "google-gtag"
   google:
     tracking_id: "G-366RDECVQM"
