feat: Add WhatsApp contact

--- a/_config.yml
+++ b/_config.yml
@@ -56,6 +56,9 @@ author:
     - label: "Téléphone"
       icon: "fa-solid fa-mobile-screen"
       url: "tel:+33699468553"
+    - label: "WhatsApp"
+      icon: "fa-brands fa-whatsapp"
+      url: "https://wa.me/33699468553"
     - label: "Instagram"
       icon: "fa-brands fa-instagram"
       url: "https://www.instagram.com/monhealthcoach/"
